--- a/cs/cess.css
+++ b/cs/cess.css
@@ -19,13 +19,16 @@ body {
 }
 
 .title {
+    display: flex;
+    justify-content: center;
+    align-items: normal;
+
     position: fixed;
     /*静止于浏览器界面*/
-
     width: 100%;
     /*宽度百分百*/
-    height: 110px;
-    /*高度110像素*/
+    height: 85px;
+    /*高度*/
     border-radius: 0 0 10px 10px;
     /*上面直角下面圆角*/
     background: linear-gradient(to right, #dbfffd, #e8ffe9);
@@ -38,14 +41,12 @@ body {
     opacity: 0.9;
     /*0.9透明比例*/
 
-    backdrop-filter: blur(10px);/*背景模糊*/
+    backdrop-filter: blur(20px);
+    /*背景模糊*/
 }
 
-.content {
-    text-align: center;
-    /*文本居中*/
-    font-size: 500%;
-    /*字体百分之五百*/
+.box0 {
+    font-size: 300%;
 }
 
 a {
@@ -174,30 +175,30 @@ a:active {
 
 /*下方内容*/
 .leftContent {
-    position: absolute;
-
-    top: 100%;
-    transform: translate(20%, -50%);
-
+    justify-content: flex-end;
+    align-items: start;
     width: 20%;
-    height: 100%;
-    border-radius: 10px 10px 10px 10px;
-    /*圆角界面*/
+    /* 控制盒子的宽度 */
+    height: 2000px;
+    /* 控制盒子的高度 */
+    transform: translate(35%, 5%);
+    border-radius: 10px 0 0 10px;
     box-shadow: 0 2px 10px rgba(17, 46, 44, 0.2);
-
     background-color: white;
     opacity: 0.8;
 }
 
 .rightContent {
-    position: absolute;
+    justify-content: flex-end;
+    align-items:start;
 
-    top: 100%;
-    left: 50%;
-    transform: translate(-35%, -50%);
+    font-size: 120%;
 
     width: 60%;
-    height: 100%;
+    /* 控制盒子的宽度 */
+    height: 2000px;
+    /* 控制盒子的高度 */
+    transform: translate(55%, -95%);
     border-radius: 10px 10px 10px 10px;
     /*圆角界面*/
     box-shadow: 0 2px 10px rgba(17, 46, 44, 0.2);
@@ -207,21 +208,21 @@ a:active {
 }
 
 /*左侧服务器内容*/
-.server1 {
+.content1 {
     position: absolute;
 
-    top: 5%;
+    top: 2%;
     left: 10%;
 
     width: 80%;
-    height: 20%;
+    height: 10%;
     border-radius: 10px 10px 10px 10px;
     box-shadow: 0 2px 10px rgba(4, 12, 11, 0.2);
 
     background-color: white;
 }
 
-.server1 h1 {
+.content1 h1 {
     position: absolute;
 
     top: 25%;
