--- a/cs/cess.css
+++ b/cs/cess.css
@@ -199,7 +199,7 @@ a:active {
     height: 2000px;
     /* 控制盒子的高度 */
     transform: translate(55%, -95%);
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 0 10px 10px 0;
     /*圆角界面*/
     box-shadow: 0 2px 10px rgba(17, 46, 44, 0.2);
 
@@ -215,17 +215,25 @@ a:active {
     left: 10%;
 
     width: 80%;
-    height: 10%;
+    height: 200px;
     border-radius: 10px 10px 10px 10px;
     box-shadow: 0 2px 10px rgba(4, 12, 11, 0.2);
 
     background-color: white;
-}
 
-.content1 h1 {
+    transition-duration: 0.5s;
+    overflow: hidden;
+}
+.content1:hover{
     position: absolute;
 
-    top: 25%;
-    left: 25%;
+    top: 1%;
+    left: 8%;
 
+    width: 84%;
+    height: 12%;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 0 2px 10px rgba(4, 12, 11, 0.2);
+
+    background-color: white;
 }
