--- a/cs/cess.css
+++ b/cs/cess.css
@@ -49,29 +49,22 @@ body {
     font-size: 300%;
 }
 
-a {
-    transition-duration: 0.5s;
-    /*转换时间0.5s*/
+a.hover {
+    color: #5bc0af;
+    text-decoration: underline;
 }
 
 a:link {
-    color: #429692;
+    color: #5bc0af;
     /*未选中时颜色*/
     text-decoration: none;
     /*取消超链接下划线*/
 }
 
 a:visited {
-    color: #152c75;
+    color: #51b3a2;
     /*已浏览过的颜色*/
 
-}
-
-a:active {
-    color: #36338d;
-    /*选中后颜色*/
-    text-decoration: none;
-    /*去雄下划线*/
 }
 
 .box {
@@ -151,13 +144,12 @@ a:active {
 
 .box a:hover,
 .box2 a:hover {
-    color: white;
+    /*color: white;*/
     /*鼠标覆盖时颜色*/
-    text-decoration: none;
+    text-decoration: underline;
     /*取消下划线*/
-
-    background-color: #000000;
-    border-radius: 10px;
+    /*background-color: #ffffff;*/
+    border-radius: 7px;
 }
 
 /*
@@ -171,70 +163,4 @@ a:active {
     width: 100%;
     height: auto;
     /*保证图片比例*/
-}
-
-/*下方内容*/
-.leftContent {
-    justify-content: flex-end;
-    align-items: start;
-    width: 20%;
-    /* 控制盒子的宽度 */
-    height: 2000px;
-    /* 控制盒子的高度 */
-    transform: translate(35%, 5%);
-    border-radius: 10px 0 0 10px;
-    box-shadow: 0 2px 10px rgba(17, 46, 44, 0.2);
-    background-color: white;
-    opacity: 0.8;
-}
-
-.rightContent {
-    justify-content: flex-end;
-    align-items: start;
-
-    font-size: 120%;
-
-    width: 60%;
-    /* 控制盒子的宽度 */
-    height: 2000px;
-    /* 控制盒子的高度 */
-    transform: translate(55%, -95%);
-    border-radius: 0 10px 10px 0;
-    /*圆角界面*/
-    box-shadow: 0 2px 10px rgba(17, 46, 44, 0.2);
-
-    background-color: white;
-    opacity: 0.8;
-}
-
-/*左侧服务器内容*/
-.content1 {
-    position: absolute;
-
-    top: 2%;
-    left: 10%;
-
-    width: 80%;
-    height: 200px;
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 0 5px 10px rgba(4, 12, 11, 0.2);
-
-    background-color: white;
-
-    transition-duration: 0.5s;
-    overflow: hidden;
-}
-
-.content1:hover {
-    position: absolute;
-
-    top: 2%;
-    left: 10%;
-
-    width: 80%;
-    height: 200px;
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 0 5px 50px rgba(4, 12, 11, 0.2);
-
-    background-color: white;
 }
